--- a/app/javascript/components/homebuyer/popuptimeline/PopupTimeline.css
+++ b/app/javascript/components/homebuyer/popuptimeline/PopupTimeline.css
@@ -9,8 +9,8 @@
   background: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
-  width: auto;
-  height: auto;
+  width: auto !important;
+  height: auto !important;
   overflow-y: scroll;
   position: relative;
   top: -9%;
@@ -60,7 +60,7 @@
   padding: 5px 20px;
   margin: 1rem;
 }
-.modal-content{
+.modal-content {
   width: 75% !important;
   height: auto !important;
   padding: 1rem 3rem !important;
