--- a/app/javascript/components/homebuyer/popuptimeline/PopupTimeline.css
+++ b/app/javascript/components/homebuyer/popuptimeline/PopupTimeline.css
@@ -7,14 +7,14 @@
 }
 .popup-container {
   background: #ffffff;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12);
+  box-shadow: none !important;
   border-radius: 12px;
-  width: auto !important;
-  height: auto !important;
-  overflow-y: scroll;
-  position: relative;
+  width: 983px;
+  height: 870px;
+  overflow: none !important;
+  position: absolute;
   top: -9%;
-  left: 0%;
+  
 }
 
 .progressbar div {
@@ -59,10 +59,4 @@
   color: #080e2d;
   padding: 5px 20px;
   margin: 1rem;
-}
-.modal-content {
-  width: 75% !important;
-  height: auto !important;
-  padding: 1rem 3rem !important;
-  top: 50% !important;
 }
