--- a/app/assets/images/homebuyer/_PopupTimeline.scss
+++ b/app/assets/images/homebuyer/_PopupTimeline.scss
@@ -5,7 +5,7 @@
   border-radius: 100px;
   margin-bottom: 50px;
 }
-.popup-container {
+.container {
   background: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
