--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -686,7 +686,7 @@ select {
   border-radius: 100px;
   margin-bottom: 50px;
 }
-.popup-container {
+.container {
   background: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.12);
   border-radius: 12px;
