Completed modal component with workflow based on button clicked

--- a/app/assets/homebuyer/_PopupTimeline.scss
+++ b/app/assets/homebuyer/_PopupTimeline.scss
@@ -4,6 +4,7 @@
   background: rgba(49, 84, 245, 0.31);
   border-radius: 100px;
   margin-bottom: 50px;
+  margin-top: 50px !important;
 }
 .popup-container {
   background: #ffffff;
