--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -685,6 +685,7 @@ select {
   background: rgba(49, 84, 245, 0.31);
   border-radius: 100px;
   margin-bottom: 50px;
+  margin-top: 50px !important;
 }
 .container {
   background: #ffffff;
