--- a/app/javascript/components/homebuyer/popuptimeline/PopupTimeline.css
+++ b/app/javascript/components/homebuyer/popuptimeline/PopupTimeline.css
@@ -4,6 +4,7 @@
   background: rgba(49, 84, 245, 0.31);
   border-radius: 100px;
   margin-bottom: 50px;
+  margin-top: 50px !important;
 }
 .popup-container {
   background: #ffffff;
