--- a/app/assets/homebuyer/_modal.scss
+++ b/app/assets/homebuyer/_modal.scss
@@ -15,6 +15,16 @@ body.active-modal {
 .overlay {
   background: rgba(49, 49, 49, 0.8);
 }
+
+#signuppopupid .modal-content {
+  background: #ffffff !important ;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 12px !important;
+  max-width: 434px !important;
+  height: 610px !important;
+  padding: 1rem 3rem !important;
+  top: 50% !important;
+}
 .modal-content {
   position: absolute;
   top: 40%;
@@ -27,3 +37,4 @@ body.active-modal {
   max-width: 600px;
   min-width: 300px;
 }
+
