--- a/app/assets/homebuyer/_signuppop.scss
+++ b/app/assets/homebuyer/_signuppop.scss
@@ -73,6 +73,17 @@ label {
   width: 983px;
   height: 679px;
 }
+
+#signuppopupid .modal-content {
+  background: #ffffff !important ;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 12px !important;
+  max-width: 434px !important;
+  height: 610px !important;
+  padding: 1rem 3rem !important;
+  top: 50% !important;
+}
+
 .modal-content {
   background: #ffffff !important ;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1) !important;
@@ -81,4 +92,15 @@ label {
   height: 610px !important;
   padding: 1rem 3rem !important;
   top: 50% !important;
+}
+.signup-pop-up{
+  top: 20% !important;
+  left: 40% !important;
+  background: #ffffff !important ;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1) !important;
+  border-radius: 12px !important;
+  width: 434px !important;
+  height: 610px !important;
+  padding: 1rem 3rem !important;
+ 
 }
